Added links & grammar correction
– Added previous & after links for case studies
– Corrected grammar

--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -410,7 +410,8 @@
 
         <div>
             <div class="mirror-content">
-                Some participants had a hard time finding the "display name" privacy settingsince it isn't shown until they
+                Some participants had a hard time finding the "display name" privacy settingsince it isn't shown until
+                they
                 deactivate the "name" toggle.
                 I added some help text to inform users how to set a display name when they don't want to share their
                 real
@@ -481,6 +482,20 @@
             same time. </li>
     </div>
 
+
+    <div class="previous-after content-home">
+        <div class="previous-case-study">
+            <a class="previous-color" href="all-about-matcha.html">View previous case study</a>
+
+
+        </div>
+        <div class="after-case-study">
+            <a class="previous-color" href="Windows to Japan.html">View next case study</a>
+
+
+        </div>
+
+    </div>
 
 
 
