--- a/Windows to Japan.html
+++ b/Windows to Japan.html
@@ -47,7 +47,7 @@
         <div class="matcha-hero">
             <div>
                 <h1>Windows to Japan</h1>
-                <h3>Making travelers' experiences better and only one.</h3>
+                <h3>Making traveler experiences better with a digital app.</h3>
             </div>
 
 
@@ -282,7 +282,8 @@
 
 
         <p>Mid-Fidelity Wireframes</p>
-        To make the sketches come alive, I started to work on mid-fidelity wireframes based on the sketches, but it wasn’t
+        To make the sketches come alive, I started to work on mid-fidelity wireframes based on the sketches, but it
+        wasn’t
         as
         intuitive as I thought it would be. After finishing the wireframes, I realized that it was somewhat
         confusing to
@@ -346,7 +347,8 @@
         I created this affinity map to summarize user feedback and what can be improved in the next step.
         Through the usability testing I verified that the majority of people found the swiping effect unintuitive. Also,
         several participants mentioned that the edit icon was hard to find. I was glad to test the
-        wireframes at this point since I would have not known the edit icon was hard to find. Now, I knew which parts of the
+        wireframes at this point since I would have not known the edit icon was hard to find. Now, I knew which parts of
+        the
         design to iterate on.
 
         <div>
@@ -454,10 +456,13 @@
             <div class="mirror-content">
                 I tested this in the mid-fidelity wireframes, and I learned that it wasn't intuitive to swipe an event
                 without any explanations.
-                For that reason, I decided to include on-boarding screens in the hi-fidelity designs to make people aware of the feature. In hi-fidelity
-                usability testing, I learned people still didn't realize they could swipe it even though some participants
-                read the whole on-boarding screens (in the Zoom usability test). 
-                I didn't want the feature to be undiscoverable, so I decided to include a pop-up screen on the itinerary page so that it gets users' attention. 
+                For that reason, I decided to include on-boarding screens in the hi-fidelity designs to make people
+                aware of the feature. In hi-fidelity
+                usability testing, I learned people still didn't realize they could swipe it even though some
+                participants
+                read the whole on-boarding screens (in the Zoom usability test).
+                I didn't want the feature to be undiscoverable, so I decided to include a pop-up screen on the itinerary
+                page so that it gets users' attention.
             </div>
             <div>
                 <a href=#img-revision-popup class="lightbox-link">
@@ -490,8 +495,10 @@
         </div>
         <div>
             <div class="mirror-content">
-                One of the participants pointed out that "Choose an alternative option in the area" wasn't clear so he couldn't find the alternative place.
-                After he said that, I realized that I didn't change the text size from 14px to 16px, so I changed it and also made it bolder for better readability.
+                One of the participants pointed out that "Choose an alternative option in the area" wasn't clear so he
+                couldn't find the alternative place.
+                After he said that, I realized that I didn't change the text size from 14px to 16px, so I changed it and
+                also made it bolder for better readability.
             </div>
             <div>
                 <a href=#img-revision-text class="lightbox-link">
@@ -533,11 +540,15 @@
         </li>
     </div>
 
-    <div class="content-home socialmedia icons">
-        <a href="Brightwheel.html">View next case study</a>
 
-
+   <div class="content-home">
+        <div class="previous-case-study">
+            <a class="previous-color-wtj" href="Brightwheel.html">View previous case study</a>
+        </div>
     </div>
+
+
+
 
 
 
