--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -295,7 +295,7 @@
             </a>
         </div>
 
-        Additionally, at first there were had two containers for private and group pages.
+        Additionally, at first there were two containers for private and group pages.
         However, I realized these two are almost the same except for the price and a few other details, so I combined
         them into one section.
 
@@ -421,9 +421,11 @@
         </div>
 
         <div>
-            <div class="mirror-content">I removed the description text and included the link, "What is Japanese Tea Ceremony? so that
+            <div class="mirror-content">I removed the description text and included the link, "What is Japanese Tea
+                Ceremony? so that
                 those interested can read more.
-                I added icons to differentiate group and private classes. The text is simple and short, yet it contains differences between the class type.</div>
+                I added icons to differentiate group and private classes. The text is simple and short, yet it contains
+                differences between the class type.</div>
 
             <div>
                 <a href=#img-revision-class class="lightbox-link">
@@ -477,6 +479,11 @@
             confused.</li>
     </div>
 
+    <div class="content-home">
+        <div class="after-case-study">
+            <a class="previous-color-matcha" href="Brightwheel.html">View next case study</a>
+        </div>
+    </div>
 
 
 
