--- a/Windows to Japan.html
+++ b/Windows to Japan.html
@@ -75,8 +75,8 @@
                 <div>
                     <li>Design an end-to-end travel application that replaces the physical travel files.
                     </li>
-                    <li>Organize all the information Windows to Japan provides to their clients and simplify it so
-                        that their clients won’t miss important information.
+                    <li>Provide a seamless experience for their clients through simplifying the process, providing real
+                        time support, and enhancing personalization.
                     </li>
                 </div>
 
@@ -95,8 +95,8 @@
                 <p>Challenges</p>
                 <li>Itineraries are usually overloaded with important information. How might we simplify the
                     contents when there is a lot of information? </li>
-                <li>Physical documents and digital apps bring users different experiences. How might we design the app
-                    so that the app won't be too text-heavy like physical documents?</li>
+                <li>Physical documents and digital apps bring users different experiences. How might we digitally
+                    optimize text-heavy physical documents??</li>
 
 
             </div>
@@ -116,10 +116,9 @@
 
     <div class="content mirror-body">
         <p>Competitive analysis</p>
-        I was curious how other travel agencies are providing tour information with their clients since I have not heard
-        of any using an app before. However, I couldn’t find any competitors doing this, so instead I picked three
-        itinerary
-        apps to analyze. Some of them have similar features to what I envisioned, such as a chat bot and
+        I was curious how other travel agencies transitioned from providing physical documents to their clients to
+        providing a full mobile experience. I decided to pick three itinerary to analyse apps because I couldn’t find
+        any competitors doing this. Some of them have similar features to what I envisioned, such as a chat bot and
         access to travel agents within the app.
 
         <div>
@@ -135,16 +134,10 @@
         </div>
 
         <p>Survey</p>
-        I conducted a survey to find out what frustrations and needs there are for travel apps in general.
-        I was also wondering if there's anyone who has used a travel agency which provides itineraries via an app.
-        For the survey recruiting, I targeted people who have used travel apps to plan their trips rather than those who
-        have used a travel
-        agency.
-        I wanted to find out and collect general feedback about travel apps so that I can understand what the users'
-        needs and
-        frustrations are.
-        I thought it was more important to understand digital products since I'm designing a digital product rather
-        than physical documents.
+        I conducted a survey to find out the frustrations and needs there are for travel apps. I was also wondering if
+        there's anyone who has used a travel agency which provides itineraries via an app. For the survey recruiting, I
+        targeted people who have used travel apps to plan their trips rather than those who have used a travel agency. I
+        wanted to gather feedback about travel apps to prioritize features.
 
 
         <div>
@@ -202,9 +195,8 @@
 
 
         <p>Persona</p>
-        Through my research, I collected a lot of data. I synthesized the data to organize user feedback
-        and
-        created this persona to filter down to just the important feedback. I tried to make this as
+        Through my research, I collected and synthesized data. To organize user feedback, I created this persona to
+        filter down to just the important feedback. I tried to make this as
         descriptive as possible so that I can easily empathize with her and design the app based on her needs and
         frustrations. From the research, I identified that the top need is to have a detailed itinerary in a simple
         format, such as bullet points.
@@ -261,7 +253,7 @@
 
         Before designing any wireframes, I decided to sketch the layout of the app. I was struggling at first
         because I
-        had no idea what the app should look like. I looked at a lot of inspirations before sketching. I sketched
+        had no idea what the app should look like. I sketched
         just
         one version first to combine the ideas I got from my inspirations. Then I sketched a second version since I
         had
@@ -541,7 +533,7 @@
     </div>
 
 
-   <div class="content-home">
+    <div class="content-home">
         <div class="previous-case-study">
             <a class="previous-color-wtj" href="Brightwheel.html">View previous case study</a>
         </div>
