--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -126,7 +126,7 @@
                 <img class="mirror-content2" src="matcha-img/Competitive analysis.jpg" alt="Competitive analysis">
             </a>
 
-            <a href="#!" class="lightbox" id="img-competitive">
+            <a href="#!" class="lightbox" id="img-competitve">
                 <span style="background-image: url('matcha-img/Competitive\ analysis.jpg')"></span>
             </a>
         </div>
