Trying to fix a bug
– Debugging

--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -112,21 +112,22 @@
 
     <div class="content mirror-body">
 
-        <p>Competitive Analysis</p>
+        <p>Secondary Research & Competitive Analysis</p>
 
         I did research to understand the matcha market as well as to learn how people perceive
         matcha.
         I learned that a) matcha consumption is increasing as a superfood and b) the majority of people associate
         matcha with ice cream, desserts, or lattes.
-        I also picked competitors who do tea ceremony lessons either online or in-person to see how they set up their
-        booking process.
-
+        For the competitors, I picked companies that provide tea ceremony lessons or online experiences to see how they
+        set up their booking process.
+        I discovered that those two direct competitors are not intended to have user-centered websites
+        rather they show beautiful images to impress the users.
         <div>
-            <a href=#img-competitive class="lightbox-link">
+            <a href=#img-competitive-analysis class="lightbox-link">
                 <img class="mirror-content2" src="matcha-img/Competitive analysis.jpg" alt="Competitive analysis">
             </a>
 
-            <a href="#!" class="lightbox" id="img-competitve">
+            <a href="#!" class="lightbox" id="img-competitive-analysis">
                 <span style="background-image: url('matcha-img/Competitive\ analysis.jpg')"></span>
             </a>
         </div>
@@ -156,7 +157,9 @@
 
 
         <p>1:1 User Interviews</p>
-        I conducted user interviews with 6 individuals who like matcha. I learned that the majority of people would
+        I conducted user interviews to dive deeper into the topi and find needs and frustrations. I recruited with 6
+        individuals who like matcha to hear their feedback about matcha and Japanese Tea Ceremony. I learned that the
+        majority of people would
         seek out Japanese Tea Ceremony as a cultural experience when they were in Japan or if they had the chance.
         However, a few participants (those who have lived in Japan before) said they would like to learn more about it.
         I decided to target those who would seek it out when given the chance, since they represent the majority
@@ -266,8 +269,7 @@
 
         <p>Mid-Fidelity Wireframes</p>
         I started to work on wireframes based on the sketches, but I realized the website was overloaded with too much
-        information about matcha. I wanted to put everything on one page, but the website had become confusing.
-        I removed the unnecessary elements from the main page, to make sure that users don't get lost.
+        information about matcha. I decided to remove the unnecessary elements from the main page, to make sure that users don't get lost.
 
         <div>
             <a href=#img-wireframes class="lightbox-link">
@@ -282,7 +284,7 @@
 
         After my first cleanup, there were still many pieces of information which made the main page look cluttered.
         I realized that the main page was losing its focus of what it was telling the users.
-        I iterated on this several times and was able to streamline the design.
+        After several iterations, I was able to streamline the design to be simpler and have less information in one page.
 
         <div>
             <a href=#img-wireframe-main class="lightbox-link">
