--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -122,17 +122,17 @@
         set up their booking process.
         I discovered that those two direct competitors are not intended to have user-centered websites
         rather they show beautiful images to impress the users.
+      
+
         <div>
             <a href=#img-competitive-analysis class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Competitive analysis.jpg" alt="Competitive analysis">
+                <img class="mirror-content2" src="matcha-img/Competitive-analysis.jpg" alt="Competitive analysis">
             </a>
 
             <a href="#!" class="lightbox" id="img-competitive-analysis">
-                <span style="background-image: url('matcha-img/Competitive\ analysis.jpg')"></span>
+                <span style="background-image: url('matcha-img/Competitive-analysis.jpg')"></span>
             </a>
         </div>
-
-
 
 
 
@@ -170,11 +170,11 @@
 
         <div>
             <a href=#img-interview class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Interview summary.jpg" alt="Interview summary">
+                <img class="mirror-content2" src="matcha-img/Interview-summary.jpg" alt="Interview summary">
             </a>
 
             <a href="#!" class="lightbox" id="img-interview">
-                <span style="background-image: url('matcha-img/Interview\ summary.jpg')"></span>
+                <span style="background-image: url('matcha-img/Interview-summary.jpg')"></span>
             </a>
         </div>
 
